fix: Higher contrast of comments

--- a/static/css/_highlight.scss
+++ b/static/css/_highlight.scss
@@ -22,7 +22,8 @@ $dt-gray-dark: #282a36; // Background
 //$dt-gray-dark: #101015; // Background
 $dt-gray: #44475a; // Current Line & Selection
 $dt-gray-light: #f8f8f2; // Foreground
-$dt-blue: #6272a4; // Comment
+//$dt-blue: #6272a4; // Comment
+$dt-blue: #95aae8; // Comment
 $dt-cyan: #8be9fd;
 $dt-green: #50fa7b;
 $dt-orange: #ffb86c;
@@ -109,6 +110,7 @@ pre {
 	.c1,
 	.cs {
 		color: $dt-blue;
+		font-weight: 300;
 	}
 
 	.kd,
